# mcp_ai

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: main.rs
src/: lib.rs
src/server/: mod.rs  protocol.rs
